[tool.poetry]
name = "ParticleSwarmOptimization"
version = "1.0.0"
description = ""
authors = ["Michael Verdegaal"]
readme = "README.md"
packages = [{include = "main"}]


[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pre-commit = "^3.7.1"
jupyterlab = "^4.2.0"
notebook = "^7.1.3"
numpy = "^1.26.4"
matplotlib = "^3.9.0"

[tool.black]
line-length = 100
extend-exclude = '/^[^.]+$|\.(?!(py)$)([^.]+$)/'

[tool.isort]
profile = "black"
line_length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
